[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chromatix"
authors = [{name = "Chromatix Team"}]
description = "Differentiable wave optics library using JAX"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "equinox>=0.11.12",
    "jax[cuda12]==0.5.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvcc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.8.0.87",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.8.93",
    "optimistix>=0.0.10",
    "einops >= 0.6.0",
    "flax >= 0.6.3",
    "chex>=0.1.5",
    "optax >=0.1.4",
    "scipy >= 1.10.0",
]
version = "0.3.0"

[project.optional-dependencies]
dev = ["mypy>= 0.991", "pytest>=7.2.0", "ruff >= 0.4.8"]
docs = ["mkdocs >= 1.4.2", "mkdocs-material >= 9.0.6", "mkdocstrings-python >= 0.8.3", "mkdocs-jupyter"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402"]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
]
