[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chromatix"
authors = [{name = "Chromatix Team"}]
description = "Differentiable wave optics library using JAX"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "equinox>=0.11.12",
    "jax[cuda12]>=0.6.0",
    "einops >= 0.6.0",
    "flax >= 0.6.3",
    "chex>=0.1.5",
    "optax >=0.1.4",
    "scipy >= 1.10.0",
    "optimistix>=0.0.10",
]
version = "0.3.0"

[project.optional-dependencies]
dev = ["mypy>= 0.991", "pytest>=7.2.0", "ruff >= 0.4.8"]
docs = ["mkdocs >= 1.4.2", "mkdocs-material >= 9.0.6", "mkdocstrings-python >= 0.8.3", "mkdocs-jupyter"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402"]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
]
