[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chromatix"
authors = [{name = "Chromatix Team"}]
description = "Differentiable wave optics library using JAX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jax>=0.4.1",
    "einops >= 0.6.0",
    "flax >= 0.6.3",
    "chex>=0.1.5",
    "optax >=0.1.4",
    "scipy >= 1.10.0",
    "pytest>=8.3.5",
    "ruff>=0.9.0",
    "pre-commit>=4.2.0",
    "jupyter>=1.1.1",
    "scikit-image>=0.25.2",
    "matplotlib>=3.10.3",
    "equinox>=0.12.2",
]
version = "0.3.0"

[project.optional-dependencies]
dev = ["mypy>= 0.991", "pytest>=7.2.0", "ruff==0.9.0", "pre-commit>=4.0.0", "matplotlib>=3.10.0"]
docs = ["mkdocs >= 1.4.2", "mkdocs-material >= 9.0.6", "mkdocstrings-python >= 0.8.3", "mkdocs-jupyter"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402"]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
